# Economic-Planning

./: CMakeLists.txt  Economic-Planning.sln  Economic-Planning.vcxproj  Economic-Planning.vcxproj.filters  main.cpp
inc/: matrix.h
src/: matrix.cpp
